--- a/TextWriter/MainWindow.xaml
+++ b/TextWriter/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TextWriter"
         mc:Ignorable="d"
-        Title="MainWindow" Height="542" Width="809" MinWidth="700" MinHeight="500">
+        Title="MainWindow" Height="742" Width="809" MinWidth="700" MinHeight="500">
     <Grid x:Name="grid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="640*"/>
@@ -18,7 +18,7 @@
             <Separator Width="5"/>
             <Button x:Name="StartButton" Content="Start" Width="115"/>
             <Separator Width="5"/>
-            <Button x:Name="SaveCharactersButton" Content="Save characters" Width="115"/>
+            <Button x:Name="SaveCharactersButton" Content="Save characters" Width="115" Click="SaveCharactersButton_Click"/>
             <Separator Width="5"/>
             <Button Width="130" Content="Open characters"/>
         </ToolBarPanel>
@@ -51,7 +51,7 @@
                 <Button x:Name="add_variant_button" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="140" Height="30" Margin="10,0,0,10" Content="Add variant" FontFamily="Calibri" FontWeight="Bold" Foreground="#FF464646"
                         Grid.Row="2"/>
                 <GridSplitter Grid.Row="3" Height="5" HorizontalAlignment="Stretch"/>
-                <Image x:Name="SymbolPreview" Grid.Row="4" Width="120" Height="120" VerticalAlignment="Top" Margin="0,10,0,0" Stretch="UniformToFill"/>
+                <Image x:Name="SymbolPreview" Grid.Row="4" Width="120" Height="120" VerticalAlignment="Top" Margin="0,10,0,0" Stretch="Fill"/>
             </Grid>
         </ScrollViewer>
         <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch"/>
