--- a/TextWriter/MainWindow.xaml
+++ b/TextWriter/MainWindow.xaml
@@ -49,12 +49,13 @@
                        Grid.Row="2"/>
                 <ListBox x:Name="variants_listbox" Margin="10,74,10,50" Grid.Row="2" SelectionChanged="variants_listbox_SelectionChanged"/>
                 <Button x:Name="add_variant_button" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="140" Height="30" Margin="10,0,0,10" Content="Add variant"  FontWeight="Bold" Foreground="#FF464646"
-                        Grid.Row="2"/>
+                        Grid.Row="2" Click="add_variant_button_Click"/>
                 <GridSplitter Grid.Row="3" Height="5" HorizontalAlignment="Stretch"/>
                 <Image x:Name="SymbolPreview" Grid.Row="4" Width="120" Height="120" VerticalAlignment="Top" Margin="0,10,0,0" Stretch="Fill"/>
                 <Slider x:Name="FillStrenght" Grid.Row="4" Margin="10,130,10,0" VerticalAlignment="Top" Maximum="100"/>
                 <Button x:Name="RemoveBackButton" Grid.Row="4" VerticalAlignment="Top" Height="33" Margin="10,153,0,0" HorizontalAlignment="Left" Width="133"  FontWeight="Bold" Foreground="#FF464646" Content="Remove back" Click="RemoveBackButton_Click"/>
                 <Button x:Name="ChangeBack" Grid.Row="4" VerticalAlignment="Top" Height="33" Margin="10,191,0,0" HorizontalAlignment="Left" Width="133"  FontWeight="Bold" Foreground="#FF464646" Content="Change back" />
+                <Button x:Name="ShowCharacter" Grid.Row="4" VerticalAlignment="Top" Height="33" Margin="10,229,0,0" HorizontalAlignment="Left" Width="133"  FontWeight="Bold" Foreground="#FF464646" Content="Show character" Click="ShowCharacter_Click" />
             </Grid>
         </ScrollViewer>
         <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch"/>
@@ -63,13 +64,16 @@
                       CanContentScroll="True" VerticalScrollBarVisibility="Auto" 
                       HorizontalScrollBarVisibility="Auto" PreviewMouseWheel="Scroller_MouseWheel"
                       Grid.Column="0">
-            <Image x:Name="Preview" Stretch="None" MouseDown="Preview_MouseDown">
-                <Image.LayoutTransform>
+            <Grid Width="{Binding ActualWidth, ElementName=Preview, Mode=OneWay}" 
+                  Height="{Binding ActualHeight, ElementName=Preview, Mode=OneWay}">
+                <Image x:Name="Preview" Stretch="None" MouseDown="Preview_MouseDown"/>
+                <Canvas x:Name="ControlsCanvas"/>
+                <Grid.LayoutTransform>
                     <TransformGroup>
                         <ScaleTransform x:Name="PreviewScale" ScaleX="1" ScaleY="1"/>
                     </TransformGroup>
-                </Image.LayoutTransform>
-            </Image>
+                </Grid.LayoutTransform>
+            </Grid>
         </ScrollViewer>
     </Grid>
 </Window>
